--- a/notebooks/02. Classifying and Clustering.ipynb
+++ b/notebooks/02. Classifying and Clustering.ipynb
@@ -169,7 +169,7 @@
     "import pandas as pd\n",
     "\n",
     "ROOT_DIR = os.path.dirname(os.getcwd())\n",
-    "DATASET_PATH = os.path.join(ROOT_DIR,'datasets','payment_fraud.csv')\n",
+    "DATASET_PATH = os.path.join(ROOT_DIR, 'datasets', 'payment_fraud.csv')\n",
     "\n",
     "dataset = pd.read_csv(DATASET_PATH)\n",
     "dataset.head()"
@@ -321,8 +321,10 @@
     }
    ],
    "source": [
-    "print(f'Unique paymentMethod categories: {list(dataset.paymentMethod.unique())}')\n",
-    "dataset = pd.get_dummies(dataset, prefix='paymentMethod', columns=['paymentMethod'], drop_first=True)\n",
+    "print(\n",
+    "    f'Unique paymentMethod categories: {list(dataset.paymentMethod.unique())}')\n",
+    "dataset = pd.get_dummies(dataset, prefix='paymentMethod', columns=[\n",
+    "                         'paymentMethod'], drop_first=True)\n",
     "dataset.head()"
    ]
   },
@@ -1038,7 +1040,7 @@
     "width": "338px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
