--- a/notebooks/03. Anomaly Detection.ipynb
+++ b/notebooks/03. Anomaly Detection.ipynb
@@ -19,7 +19,7 @@
    },
    "source": [
     "<h1>Sisällysluettelo<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Anomaly-Detection\" data-toc-modified-id=\"Anomaly-Detection-1\">Anomaly Detection</a></span><ul class=\"toc-item\"><li><span><a href=\"#When-to-Use-Anomaly-Detection-Versus-Supervised-Learning\" data-toc-modified-id=\"When-to-Use-Anomaly-Detection-Versus-Supervised-Learning-1.1\">When to Use Anomaly Detection Versus Supervised Learning</a></span></li><li><span><a href=\"#Intrusion-Detection-with-Heuristics\" data-toc-modified-id=\"Intrusion-Detection-with-Heuristics-1.2\">Intrusion Detection with Heuristics</a></span></li><li><span><a href=\"#Data-Driven-Methods\" data-toc-modified-id=\"Data-Driven-Methods-1.3\">Data-Driven Methods</a></span></li><li><span><a href=\"#Feature-Engineering-for-Anomaly-Detection\" data-toc-modified-id=\"Feature-Engineering-for-Anomaly-Detection-1.4\">Feature Engineering for Anomaly Detection</a></span><ul class=\"toc-item\"><li><span><a href=\"#Host-Intrusion-Detection\" data-toc-modified-id=\"Host-Intrusion-Detection-1.4.1\">Host Intrusion Detection</a></span></li><li><span><a href=\"#Network-Intrusion-Detection\" data-toc-modified-id=\"Network-Intrusion-Detection-1.4.2\">Network Intrusion Detection</a></span></li><li><span><a href=\"#Web-Application-Intrusion-Detection\" data-toc-modified-id=\"Web-Application-Intrusion-Detection-1.4.3\">Web Application Intrusion Detection</a></span></li></ul></li><li><span><a href=\"#Anomaly-Detection-with-Data-and-Algorithms\" data-toc-modified-id=\"Anomaly-Detection-with-Data-and-Algorithms-1.5\">Anomaly Detection with Data and Algorithms</a></span><ul class=\"toc-item\"><li><span><a href=\"#Forecasting-(Supervised-Machine-Learning)\" data-toc-modified-id=\"Forecasting-(Supervised-Machine-Learning)-1.5.1\">Forecasting (Supervised Machine Learning)</a></span><ul class=\"toc-item\"><li><span><a href=\"#ARIMA\" data-toc-modified-id=\"ARIMA-1.5.1.1\">ARIMA</a></span></li><li><span><a href=\"#Artificial-Neural-Networks\" data-toc-modified-id=\"Artificial-Neural-Networks-1.5.1.2\">Artificial Neural Networks</a></span></li></ul></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Anomaly-Detection\" data-toc-modified-id=\"Anomaly-Detection-1\">Anomaly Detection</a></span><ul class=\"toc-item\"><li><span><a href=\"#When-to-Use-Anomaly-Detection-Versus-Supervised-Learning\" data-toc-modified-id=\"When-to-Use-Anomaly-Detection-Versus-Supervised-Learning-1.1\">When to Use Anomaly Detection Versus Supervised Learning</a></span></li><li><span><a href=\"#Intrusion-Detection-with-Heuristics\" data-toc-modified-id=\"Intrusion-Detection-with-Heuristics-1.2\">Intrusion Detection with Heuristics</a></span></li><li><span><a href=\"#Data-Driven-Methods\" data-toc-modified-id=\"Data-Driven-Methods-1.3\">Data-Driven Methods</a></span></li><li><span><a href=\"#Feature-Engineering-for-Anomaly-Detection\" data-toc-modified-id=\"Feature-Engineering-for-Anomaly-Detection-1.4\">Feature Engineering for Anomaly Detection</a></span><ul class=\"toc-item\"><li><span><a href=\"#Host-Intrusion-Detection\" data-toc-modified-id=\"Host-Intrusion-Detection-1.4.1\">Host Intrusion Detection</a></span></li><li><span><a href=\"#Network-Intrusion-Detection\" data-toc-modified-id=\"Network-Intrusion-Detection-1.4.2\">Network Intrusion Detection</a></span></li><li><span><a href=\"#Web-Application-Intrusion-Detection\" data-toc-modified-id=\"Web-Application-Intrusion-Detection-1.4.3\">Web Application Intrusion Detection</a></span></li></ul></li><li><span><a href=\"#Anomaly-Detection-with-Data-and-Algorithms\" data-toc-modified-id=\"Anomaly-Detection-with-Data-and-Algorithms-1.5\">Anomaly Detection with Data and Algorithms</a></span><ul class=\"toc-item\"><li><span><a href=\"#Forecasting-(Supervised-Machine-Learning)\" data-toc-modified-id=\"Forecasting-(Supervised-Machine-Learning)-1.5.1\">Forecasting (Supervised Machine Learning)</a></span><ul class=\"toc-item\"><li><span><a href=\"#ARIMA\" data-toc-modified-id=\"ARIMA-1.5.1.1\">ARIMA</a></span></li><li><span><a href=\"#Artificial-Neural-Networks\" data-toc-modified-id=\"Artificial-Neural-Networks-1.5.1.2\">Artificial Neural Networks</a></span></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-1.5.1.3\">Summary</a></span></li></ul></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -133,9 +133,9 @@
     }
    ],
    "source": [
-    "%%bash\n",
+    "% % bash\n",
     "osqueryi\n",
-    "SELECT username FROM users ORDER BY username ASC LIMIT 10;"
+    "SELECT username FROM users ORDER BY username ASC LIMIT 10"
    ]
   },
   {
@@ -165,9 +165,9 @@
     }
    ],
    "source": [
-    "%%bash\n",
+    "% % bash\n",
     "osqueryi\n",
-    "SELECT pid, name, resident_size FROM processes ORDER BY resident_size DESC LIMIT 3;"
+    "SELECT pid, name, resident_size FROM processes ORDER BY resident_size DESC LIMIT 3"
    ]
   },
   {
@@ -183,9 +183,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
+    "% % bash\n",
     "osqueryi\n",
-    "SELECT * FROM processes WHERE on_disk = 0;"
+    "SELECT * FROM processes WHERE on_disk = 0"
    ]
   },
   {
@@ -311,14 +311,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize']=(14,4)\n",
-    "dataset = pd.read_csv(os.path.join(os.getcwd(),'datasets','cpu-a.csv'))\n",
-    "x,y = dataset.iloc[:-66],dataset.iloc[-66:]\n",
+    "plt.rcParams['figure.figsize'] = (14, 4)\n",
+    "dataset = pd.read_csv(os.path.join(os.getcwd(), 'datasets', 'cpu-a.csv'))\n",
+    "x, y = dataset.iloc[:-66], dataset.iloc[-66:]\n",
     "fig, ax = plt.subplots()\n",
-    "x.plot(ax=ax),y.plot(ax=ax)\n",
-    "ax.legend(['x','y'])\n",
+    "x.plot(ax=ax), y.plot(ax=ax)\n",
+    "ax.legend(['x', 'y'])\n",
     "plt.title(\"CPU utilization dataset, interval=sec\")\n",
-    "plt.xlim(0,len(dataset))\n",
+    "plt.xlim(0, len(dataset))\n",
     "plt.show()"
    ]
   },
@@ -349,13 +349,13 @@
    ],
    "source": [
     "import statsmodels.api as sm_api\n",
-    "model = sm_api.tsa.ARIMA(endog=x.cpu,order=(8,0,1)).fit(disp=False)\n",
+    "model = sm_api.tsa.ARIMA(endog=x.cpu, order=(8, 0, 1)).fit(disp=False)\n",
     "fig, ax = plt.subplots()\n",
     "model.plot_predict(ax=ax)\n",
     "y.plot(ax=ax)\n",
-    "ax.legend(['x_pred','x_true','y'])\n",
+    "ax.legend(['x_pred', 'x_true', 'y'])\n",
     "plt.title('Fitted ARIMA model')\n",
-    "plt.xlim(0,len(dataset))\n",
+    "plt.xlim(0, len(dataset))\n",
     "plt.show()"
    ]
   },
@@ -386,10 +386,11 @@
    ],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "model.plot_predict(start=len(x),end=len(x)+len(y),plot_insample=False,dynamic=True,ax=ax)\n",
+    "model.plot_predict(start=len(x), end=len(x)+len(y),\n",
+    "                   plot_insample=False, dynamic=True, ax=ax)\n",
     "y.plot(ax=ax)\n",
     "plt.title('Prediction vs. true values')\n",
-    "plt.xlim(y.index[0],y.index[-1])\n",
+    "plt.xlim(y.index[0], y.index[-1])\n",
     "plt.show()"
    ]
   },
@@ -440,9 +441,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize']=(14,4)\n",
-    "dataset = pd.read_csv(os.path.join(os.getcwd(),'datasets','cpu-a.csv'))\n",
-    "_=dataset.plot()"
+    "plt.rcParams['figure.figsize'] = (14, 4)\n",
+    "dataset = pd.read_csv(os.path.join(os.getcwd(), 'datasets', 'cpu-a.csv'))\n",
+    "_ = dataset.plot()"
    ]
   },
   {
@@ -526,12 +527,16 @@
     "import torch\n",
     "import torch.utils.data as data\n",
     "import torch.nn.utils.rnn as rnn_utils\n",
+    "\n",
+    "\n",
     "class CPUDataset(data.Dataset):\n",
-    "    def __init__(self,n_grams):\n",
-    "        self.data=torch.Tensor(n_grams)\n",
-    "    def __getitem__(self,index):\n",
-    "        return (self.data[index,:-1].contiguous().view(4,-1), # Required shape [seq_l, data]\n",
-    "                self.data[index,-1])\n",
+    "    def __init__(self, n_grams):\n",
+    "        self.data = torch.Tensor(n_grams)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return (self.data[index, :-1].contiguous().view(4, -1),  # Required shape [seq_l, data]\n",
+    "                self.data[index, -1])\n",
+    "\n",
     "    def __len__(self):\n",
     "        return len(self.data)"
    ]
@@ -553,8 +558,8 @@
    "source": [
     "train = CPUDataset(n_grams_norm[:-66])\n",
     "validate = CPUDataset(n_grams_norm[-66:])\n",
-    "print(\"Koulutusdatajoukon koko:\",len(train))\n",
-    "print(\"Validointidatajoukon koko:\",len(validate))"
+    "print(\"Koulutusdatajoukon koko:\", len(train))\n",
+    "print(\"Validointidatajoukon koko:\", len(validate))"
    ]
   },
   {
@@ -564,7 +569,8 @@
    "outputs": [],
    "source": [
     "from fastai.data import DataBunch\n",
-    "data_bunch = DataBunch.create(train_ds=train,valid_ds=validate,num_workers=0,bs=2)"
+    "data_bunch = DataBunch.create(\n",
+    "    train_ds=train, valid_ds=validate, num_workers=0, bs=2)"
    ]
   },
   {
@@ -611,8 +617,13 @@
    "source": [
     "from fastai.train import Learner, ShowGraph\n",
     "from torch.optim import RMSprop\n",
-    "rnn_mse = lambda pred,target:nn.MSELoss()(pred[0][:,-1,-1],target)\n",
-    "learner = Learner(data=data_bunch,model=model,opt_fn=RMSprop,loss_fn=rnn_mse,callback_fns=ShowGraph)"
+    "\n",
+    "\n",
+    "def rnn_mse(pred, target): return nn.MSELoss()(pred[0][:, -1, -1], target)\n",
+    "\n",
+    "\n",
+    "learner = Learner(data=data_bunch, model=model, opt_fn=RMSprop,\n",
+    "                  loss_fn=rnn_mse, callback_fns=ShowGraph)"
    ]
   },
   {
@@ -702,10 +713,12 @@
    "source": [
     "y_train_pred = []\n",
     "y_train_true = []\n",
-    "for x,y in data.DataLoader(train):\n",
-    "    y_train_pred.append(model(x.cuda())[0][:,-1,-1].detach().cpu().numpy()[0])\n",
+    "for x, y in data.DataLoader(train):\n",
+    "    y_train_pred.append(\n",
+    "        model(x.cuda())[0][:, -1, -1].detach().cpu().numpy()[0])\n",
     "    y_train_true.append(y.numpy()[0])\n",
-    "_=pd.DataFrame([y_train_pred,y_train_true],index=['y_pred','y_true']).T.plot(title=\"Training fit\")    "
+    "_ = pd.DataFrame([y_train_pred, y_train_true], index=[\n",
+    "                 'y_pred', 'y_true']).T.plot(title=\"Training fit\")"
    ]
   },
   {
@@ -736,10 +749,12 @@
    "source": [
     "y_validate_pred = []\n",
     "y_validate_true = []\n",
-    "for x,y in data.DataLoader(validate):\n",
-    "    y_validate_pred.append(model(x.cuda())[0][:,-1,-1].detach().cpu().numpy()[0])\n",
+    "for x, y in data.DataLoader(validate):\n",
+    "    y_validate_pred.append(\n",
+    "        model(x.cuda())[0][:, -1, -1].detach().cpu().numpy()[0])\n",
     "    y_validate_true.append(y.numpy()[0])\n",
-    "_=pd.DataFrame([y_validate_pred,y_validate_true],index=['y_pred','y_true']).T.plot(title=\"Validation fit\")    "
+    "_ = pd.DataFrame([y_validate_pred, y_validate_true], index=[\n",
+    "                 'y_pred', 'y_true']).T.plot(title=\"Validation fit\")"
    ]
   },
   {
