--- a/notebooks/01. Why Machine Learning and Security.ipynb
+++ b/notebooks/01. Why Machine Learning and Security.ipynb
@@ -146,9 +146,9 @@
     "from utils import email_utils\n",
     "from IPython.display import display\n",
     "\n",
-    "ROOT_DIR = os.path.join(os.path.dirname(os.getcwd()),'datasets','trec07p')\n",
-    "DATA_DIR = os.path.join(ROOT_DIR,'data')\n",
-    "LABELS_FILE = os.path.join(ROOT_DIR,'full','index')\n",
+    "ROOT_DIR = os.path.join(os.path.dirname(os.getcwd()), 'datasets', 'trec07p')\n",
+    "DATA_DIR = os.path.join(ROOT_DIR, 'data')\n",
+    "LABELS_FILE = os.path.join(ROOT_DIR, 'full', 'index')\n",
     "TRAINING_SET_RATIO = 0.7\n",
     "\n",
     "labels = email_utils.read_labels(LABELS_FILE)\n",
@@ -179,14 +179,14 @@
     "for filename in x_train:\n",
     "\n",
     "    path = os.path.join(DATA_DIR, filename)\n",
-    "    \n",
+    "\n",
     "    if filename in labels:\n",
-    "    \n",
+    "\n",
     "        label, stems = labels[filename], email_utils.load_stems(path)\n",
-    "        \n",
+    "\n",
     "        if not stems:\n",
     "            continue\n",
-    "        \n",
+    "\n",
     "        ham_words.update(stems) if label == 1 else spam_words.update(stems)\n",
     "\n",
     "blacklist = spam_words - ham_words\n",
@@ -363,12 +363,12 @@
     "        if not stems:\n",
     "            continue\n",
     "\n",
-    "        if stems & blacklist: # Malli: Spam\n",
+    "        if stems & blacklist:  # Malli: Spam\n",
     "            if label == 1:\n",
     "                false_neg += 1\n",
     "            else:\n",
     "                true_neg += 1\n",
-    "        else: # Malli: Mail\n",
+    "        else:  # Malli: Mail\n",
     "            if label == 1:\n",
     "                true_pos += 1\n",
     "            else:\n",
@@ -382,7 +382,8 @@
     "display(results)\n",
     "print(\"Tulokset prosenteissa:\")\n",
     "display(results_p)\n",
-    "print(f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
+    "print(\n",
+    "    f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
    ]
   },
   {
@@ -425,8 +426,8 @@
     }
    ],
    "source": [
-    "%%bash\n",
-    "pip install datasketch -U"
+    "% % bash\n",
+    "pip install datasketch - U"
    ]
   },
   {
@@ -451,9 +452,9 @@
     "\n",
     "    minhash = MinHash(num_perm=128)\n",
     "    stems = email_utils.load_stems(os.path.join(DATA_DIR, file))\n",
-    "    \n",
+    "\n",
     "    if len(stems) > 1:\n",
-    "        \n",
+    "\n",
     "        [minhash.update(stem.encode('utf-8')) for stem in stems]\n",
     "        lsh_spam.insert(file, minhash)"
    ]
@@ -596,21 +597,22 @@
     "for file in x_test:\n",
     "\n",
     "    if file in labels:\n",
-    "        \n",
+    "\n",
     "        minhash = MinHash(num_perm=128)\n",
-    "        label, stems = labels[file], email_utils.load_stems(os.path.join(DATA_DIR, file))\n",
+    "        label, stems = labels[file], email_utils.load_stems(\n",
+    "            os.path.join(DATA_DIR, file))\n",
     "\n",
     "        if len(stems) > 1:\n",
-    "            \n",
+    "\n",
     "            [minhash.update(stem.encode('utf-8')) for stem in stems]\n",
     "            model_matches = lsh_spam.query(minhash)\n",
-    "            \n",
-    "            if model_matches: # Malli: Spam\n",
+    "\n",
+    "            if model_matches:  # Malli: Spam\n",
     "                if label == 1:\n",
     "                    false_neg += 1\n",
     "                else:\n",
     "                    true_neg += 1\n",
-    "            else: # Malli: Mail\n",
+    "            else:  # Malli: Mail\n",
     "                if label == 1:\n",
     "                    true_pos += 1\n",
     "                else:\n",
@@ -624,7 +626,8 @@
     "display(results)\n",
     "print(\"Tulokset prosenteissa:\")\n",
     "display(results_p)\n",
-    "print(f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
+    "print(\n",
+    "    f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
    ]
   },
   {
@@ -782,7 +785,8 @@
     "    email = email_utils.extract_email_text(os.path.join(DATA_DIR, file))\n",
     "    x.append(email), y.append(labels[file])\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=1-TRAINING_SET_RATIO)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=1-TRAINING_SET_RATIO)\n",
     "\n",
     "vectorizer = CountVectorizer()\n",
     "x_train_vector = vectorizer.fit_transform(x_train)\n",
@@ -800,7 +804,8 @@
     "display(results)\n",
     "print(\"Tulokset prosenteissa:\")\n",
     "display(results_p)\n",
-    "print(f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
+    "print(\n",
+    "    f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
    ]
   },
   {
