--- a/01. Why Machine Learning and Security.ipynb
+++ b/01. Why Machine Learning and Security.ipynb
@@ -865,7 +865,7 @@
     "width": "338px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
