--- a/07. Production Systems.ipynb
+++ b/07. Production Systems.ipynb
@@ -19,7 +19,7 @@
    },
    "source": [
     "<h1>Sisällysluettelo<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Production-Systems\" data-toc-modified-id=\"Production-Systems-1\">Production Systems</a></span><ul class=\"toc-item\"><li><span><a href=\"#Defining-Machine-Learning-System-Maturity-and-Scalability\" data-toc-modified-id=\"Defining-Machine-Learning-System-Maturity-and-Scalability-1.1\">Defining Machine Learning System Maturity and Scalability</a></span><ul class=\"toc-item\"><li><span><a href=\"#What's-Important-for-Security-Machine-Learning-Systems?\" data-toc-modified-id=\"What's-Important-for-Security-Machine-Learning-Systems?-1.1.1\">What's Important for Security Machine Learning Systems?</a></span></li></ul></li><li><span><a href=\"#Data-Quality\" data-toc-modified-id=\"Data-Quality-1.2\">Data Quality</a></span><ul class=\"toc-item\"><li><span><a href=\"#Problem:-Bias-in-Datasets\" data-toc-modified-id=\"Problem:-Bias-in-Datasets-1.2.1\">Problem: Bias in Datasets</a></span></li><li><span><a href=\"#Problem:-Label-Inaccuracy\" data-toc-modified-id=\"Problem:-Label-Inaccuracy-1.2.2\">Problem: Label Inaccuracy</a></span></li><li><span><a href=\"#Solutions:-Data-Quality\" data-toc-modified-id=\"Solutions:-Data-Quality-1.2.3\">Solutions: Data Quality</a></span></li><li><span><a href=\"#Problem:-Missing-Data\" data-toc-modified-id=\"Problem:-Missing-Data-1.2.4\">Problem: Missing Data</a></span></li><li><span><a href=\"#Solutions:-Missing-Data\" data-toc-modified-id=\"Solutions:-Missing-Data-1.2.5\">Solutions: Missing Data</a></span></li></ul></li><li><span><a href=\"#Model-Quality\" data-toc-modified-id=\"Model-Quality-1.3\">Model Quality</a></span><ul class=\"toc-item\"><li><span><a href=\"#Problem:-Hyperparameter-Optimization\" data-toc-modified-id=\"Problem:-Hyperparameter-Optimization-1.3.1\">Problem: Hyperparameter Optimization</a></span></li><li><span><a href=\"#Solutions:-Hyperparameter-Optimization\" data-toc-modified-id=\"Solutions:-Hyperparameter-Optimization-1.3.2\">Solutions: Hyperparameter Optimization</a></span></li><li><span><a href=\"#Feature:-Feedback-Loops,-A/B-Testing-of-Models\" data-toc-modified-id=\"Feature:-Feedback-Loops,-A/B-Testing-of-Models-1.3.3\">Feature: Feedback Loops, A/B Testing of Models</a></span></li><li><span><a href=\"#Feature:-Repeatable-and-Explainable-Results\" data-toc-modified-id=\"Feature:-Repeatable-and-Explainable-Results-1.3.4\">Feature: Repeatable and Explainable Results</a></span></li></ul></li><li><span><a href=\"#Performance\" data-toc-modified-id=\"Performance-1.4\">Performance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Goal:-Low-Latency,-High-Scalability\" data-toc-modified-id=\"Goal:-Low-Latency,-High-Scalability-1.4.1\">Goal: Low Latency, High Scalability</a></span></li><li><span><a href=\"#Performance-Optimization\" data-toc-modified-id=\"Performance-Optimization-1.4.2\">Performance Optimization</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Production-Systems\" data-toc-modified-id=\"Production-Systems-1\">Production Systems</a></span><ul class=\"toc-item\"><li><span><a href=\"#Defining-Machine-Learning-System-Maturity-and-Scalability\" data-toc-modified-id=\"Defining-Machine-Learning-System-Maturity-and-Scalability-1.1\">Defining Machine Learning System Maturity and Scalability</a></span><ul class=\"toc-item\"><li><span><a href=\"#What's-Important-for-Security-Machine-Learning-Systems?\" data-toc-modified-id=\"What's-Important-for-Security-Machine-Learning-Systems?-1.1.1\">What's Important for Security Machine Learning Systems?</a></span></li></ul></li><li><span><a href=\"#Data-Quality\" data-toc-modified-id=\"Data-Quality-1.2\">Data Quality</a></span><ul class=\"toc-item\"><li><span><a href=\"#Problem:-Bias-in-Datasets\" data-toc-modified-id=\"Problem:-Bias-in-Datasets-1.2.1\">Problem: Bias in Datasets</a></span></li><li><span><a href=\"#Problem:-Label-Inaccuracy\" data-toc-modified-id=\"Problem:-Label-Inaccuracy-1.2.2\">Problem: Label Inaccuracy</a></span></li><li><span><a href=\"#Solutions:-Data-Quality\" data-toc-modified-id=\"Solutions:-Data-Quality-1.2.3\">Solutions: Data Quality</a></span></li><li><span><a href=\"#Problem:-Missing-Data\" data-toc-modified-id=\"Problem:-Missing-Data-1.2.4\">Problem: Missing Data</a></span></li><li><span><a href=\"#Solutions:-Missing-Data\" data-toc-modified-id=\"Solutions:-Missing-Data-1.2.5\">Solutions: Missing Data</a></span></li></ul></li><li><span><a href=\"#Model-Quality\" data-toc-modified-id=\"Model-Quality-1.3\">Model Quality</a></span><ul class=\"toc-item\"><li><span><a href=\"#Problem:-Hyperparameter-Optimization\" data-toc-modified-id=\"Problem:-Hyperparameter-Optimization-1.3.1\">Problem: Hyperparameter Optimization</a></span></li><li><span><a href=\"#Solutions:-Hyperparameter-Optimization\" data-toc-modified-id=\"Solutions:-Hyperparameter-Optimization-1.3.2\">Solutions: Hyperparameter Optimization</a></span></li><li><span><a href=\"#Feature:-Feedback-Loops,-A/B-Testing-of-Models\" data-toc-modified-id=\"Feature:-Feedback-Loops,-A/B-Testing-of-Models-1.3.3\">Feature: Feedback Loops, A/B Testing of Models</a></span></li><li><span><a href=\"#Feature:-Repeatable-and-Explainable-Results\" data-toc-modified-id=\"Feature:-Repeatable-and-Explainable-Results-1.3.4\">Feature: Repeatable and Explainable Results</a></span></li></ul></li><li><span><a href=\"#Performance\" data-toc-modified-id=\"Performance-1.4\">Performance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Goal:-Low-Latency,-High-Scalability\" data-toc-modified-id=\"Goal:-Low-Latency,-High-Scalability-1.4.1\">Goal: Low Latency, High Scalability</a></span></li><li><span><a href=\"#Performance-Optimization\" data-toc-modified-id=\"Performance-Optimization-1.4.2\">Performance Optimization</a></span></li><li><span><a href=\"#Horizontal-Scaling-with-Distributed-Computing-Frameworks\" data-toc-modified-id=\"Horizontal-Scaling-with-Distributed-Computing-Frameworks-1.4.3\">Horizontal Scaling with Distributed Computing Frameworks</a></span></li><li><span><a href=\"#Using-Cloud-Services\" data-toc-modified-id=\"Using-Cloud-Services-1.4.4\">Using Cloud Services</a></span></li></ul></li><li><span><a href=\"#Maintainability\" data-toc-modified-id=\"Maintainability-1.5\">Maintainability</a></span><ul class=\"toc-item\"><li><span><a href=\"#Problem:-Checkpointing,-Versioining-and-Deploying-Models\" data-toc-modified-id=\"Problem:-Checkpointing,-Versioining-and-Deploying-Models-1.5.1\">Problem: Checkpointing, Versioining and Deploying Models</a></span></li><li><span><a href=\"#Goal:-Graceful-Degradation\" data-toc-modified-id=\"Goal:-Graceful-Degradation-1.5.2\">Goal: Graceful Degradation</a></span></li><li><span><a href=\"#Goal:-Easily-Tunable-and-Configurable\" data-toc-modified-id=\"Goal:-Easily-Tunable-and-Configurable-1.5.3\">Goal: Easily Tunable and Configurable</a></span></li></ul></li><li><span><a href=\"#Monitoring-and-Alerting\" data-toc-modified-id=\"Monitoring-and-Alerting-1.6\">Monitoring and Alerting</a></span></li><li><span><a href=\"#Security-and-Reliability\" data-toc-modified-id=\"Security-and-Reliability-1.7\">Security and Reliability</a></span><ul class=\"toc-item\"><li><span><a href=\"#Feature:-Robustness-in-Adversarial-Contexts\" data-toc-modified-id=\"Feature:-Robustness-in-Adversarial-Contexts-1.7.1\">Feature: Robustness in Adversarial Contexts</a></span></li><li><span><a href=\"#Feature:-Data-Privacy-Safeguards-and-Guarantees\" data-toc-modified-id=\"Feature:-Data-Privacy-Safeguards-and-Guarantees-1.7.2\">Feature: Data Privacy Safeguards and Guarantees</a></span></li></ul></li><li><span><a href=\"#Feedback-and-Usability\" data-toc-modified-id=\"Feedback-and-Usability-1.8\">Feedback and Usability</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -860,7 +860,150 @@
    "source": [
     "### Horizontal Scaling with Distributed Computing Frameworks\n",
     "\n",
-    "Kuten juuri mainittiinkin, on rinnakkaistus (*parallelization*) tehokas tapa lisätä käytetyn mallin suorituskykyä. Vaikkakaan kaikkia malleja ja datajoukkoja ei niin vain voida suoraan hajauttaa osiin, "
+    "Kuten juuri mainittiinkin, on rinnakkaistus (*parallelization*) tehokas tapa lisätä käytetyn mallin suorituskykyä. Vaikkakaan kaikkia malleja ja datajoukkoja ei niin vain voida suoraan hajauttaa osiin (esim. tukivektorikone), mutta toiset menetelmät ovat luonteeltaan jo lähtökohtaisesti hajautettuja (esim. satunnaismetsä). Tässä aliluvussa ei mennä rinnakkaishajautuksen teoriaan, vaan esitellään tapoja toteuttaa se. Vaikka yksittäisten mallien suorius ei aina ole sellaisenaan rinnakkaistettavissa, esimerkiksi toisistaan riippumattomat hyperparametrien virityskoulutukset voidaan huoletta ajaa hajautetusti.\n",
+    "\n",
+    "Apache Spark on kehys, jolla prosessien hajautus onnistuu hyvin. Koneoppimista varten on kehitetty [`spark-sklearn`](https://github.com/databricks/spark-sklearn), joka tarjoaa mm. hyperparametrien viritykseen hajautetun toteutuksen `scikit-learn`-hilaetsintäöimplementaatiosta `GirdSearchCV`. Toteutus tarjoaa tiettyjen ominaisuuksien nopeaa hajautettua käyttöönottoa, joskin tarjonta ylipäätään on hieman suppeahko ja samoin se edellyttää välimuistiin mahtuvia datajoukkoja.\n",
+    "\n",
+    "Toinen varteenotettava, joskin enemmän tapauskohtaista kehitystyötä vaativa kehys, on [`pyspark`](http://spark.apache.org/docs/2.2.0/api/python/pyspark.html). Pelkän laskennan hajautuksen lisäksi tämä toteutus tarjoaa mahdollisuuden myös datan käsittelyn hajautukseen Pandas DataFrame-tietotyypin tapaan. \n",
+    "\n",
+    "Käydäänpä seuraavaksi esimerkin avulla yksinkertaisen `pyspark` tietueen luominen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- id: integer (nullable = false)\n",
+      " |-- email: string (nullable = false)\n",
+      " |-- label: double (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import types, SparkSession\n",
+    "\n",
+    "spark = SparkSession.builder.master('local').appName('esimerkki').getOrCreate()\n",
+    "\n",
+    "schema = types.StructType([\n",
+    "    types.StructField('id', types.IntegerType(), nullable=False),\n",
+    "    types.StructField('email', types.StringType(), nullable=False),\n",
+    "    types.StructField('label', types.DoubleType(), nullable=False)])\n",
+    "\n",
+    "df = spark.createDataFrame(\n",
+    "    data=[{'id':1,'email':'testi.testaaja@testi.fi','label':0.8}],\n",
+    "    schema=schema)\n",
+    "\n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pyspark` tarjoaa myös paljon monia toiminnallisuuksia, kuten algoritmien implementaatioita ja datan esikäsittelytoimintoja. Tässä kohdin on kuitenkin mieleekkäämpää ohjata halukkaat tutustumaan toteutuksen dokumentaatioon syvemmän esimerkin sijasta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Cloud Services\n",
+    "\n",
+    "\"Koneoppiminen palveluna\"-konsepti (*machine learning as a service, MLaaS*) on alati kasvava markkina-alue. Monet suuret toimijat, kuten Google, IBM, Amazon ja Microsoft tarjoavat jo omia pilvipohjaisia laskenta-alustoja valmiilla ratkaisuilla. Markkinassa toimii myös monia pienempiä ja keskisuuriakin yrityksiä, jotka pyrkivät tarjoamaan mallien koulutuksen, hallinnan ja tuotantokäytön helppokäyttöisenä palveluna. Pilvipalvelujen käyttö voi antaa alun kokeiluvaiheisiin kaivattua joustavuutta. Tietoturvakriittisten mallien ajaminen vain kolmannen osapuolen pilvipalvelussa on kuitenkin hieman kyseenalaista. Samoin palvelujen kustannusrakenne muodostuu usein laskenta-ajasta, jota koneoppimisessa muodostuu hyvinkin nopeasti. Siksi laskentakapasiteetin ostaminen on punnittava tarkoin sen ulkoistamisen kanssa, ennen suuremman mittaluokan koulutuksia."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maintainability\n",
+    "\n",
+    "Yrityksiin kehitetyt mallit ja menetelmät tapaavat elää yrityksissä kehittäjiää pidempään. Siksi myös koneoppimismenetelmien hallittavuus, muokattavuus, korjattavuus ja kehitettävyys on erityisen tärkeää luotettavan ja turvallisen toiminnan takaamiseksi. Toisaalta kääntäen, huonosti ylläpidettävät järjestelmät tavataan hylätä ja korvata toisilta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem: Checkpointing, Versioining and Deploying Models\n",
+    "\n",
+    "Koska koneoppimismallit koulutetaan datalla ja siihen ne myös sovittuvat, on mallien käsittely ikään kuin datana perusteltua. Versioinnin ja mallit tuottavan koodin näkökulmasta ne ovat kuitenkin myös nähtävissä ohjelmistoina. Mallit hyperparametreineen ja ominaisuuksineen tulisi siksi olla tallennettuna versioidusti tietokantaan mm. helpon palauttamisen vuoksi, mutta samoin myös versionhallinnassa muutostenhallinnan näkökulmasta. Näin vanhatkin tulokset voidaan ottaa tarkasteluun, mikäli ilmenee tarve esimerkiksi auditoida toimintaa historiassa.\n",
+    "\n",
+    "Käytännössä mallit saadaan helposti tallennettua binäärimuotoon käyttämällä `pickle`-moduulia, josta useissa koneoppimiskehyksissä on myös olemassa jo valmiit omat toteutuksensa. Muitakin tapoja on, kuten XML-pohjaisen ennustemallien merkintäkielen (*predictive model markup language, PMML*) käyttö. \n",
+    "\n",
+    "Tuotantoonviennin näkökulmasta mallien käyttö tulisi tehdä mahdollisimman idioottivarmaksi. Tapoja saavuttaa tämä on rakentaa malleille oma tarkkaan määritetty REST-rajapinta ja tarjota mallin toimintaa ikäänkuin alipalveluna palvelinpuolella. Mallien naittaminen osaksi muita järjestelmiä tekee sekä järjestelmistä että malleista jäykempiä ylläpitää."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Goal: Graceful Degradation\n",
+    "\n",
+    "Virhetilanteissa ohjelmistojen tulisi yleisestikin toimia huomaamattomasti. Esimerkiksi uusia teknologioita käyttävän monimutkaisen web-palvelun tulisi näkyä joka tapauksessa edes vanhempana ja yksinkertaisempana versiona, mikäli käyttäjän selain ei uutta palvelua tue. Samoin koneoppimismenetelmien virhetilanteissa tulee löytyä ennalta toteutetut varajärjestelmät malleineen ja prosesseineen. Tilannekohtaisesti virhetilanne voi jatkua liikenteen läpi päästävänä (*fail open*) tai estävänä (*fail closed*). Tietoturvakontekstissa jälkimmäinen takaa ainakin kohdejärjestelmän turvallisuuden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Goal: Easily Tunable and Configurable\n",
+    "\n",
+    "Jopa uskonnollinen koodin ja konfiguraatioiden erottelu on edellytys tuotanto-ohjelmistoille. Käytännössä esimerkiksi tietoturva-asiantuntijat, joiden tuotantotasoisen koodin ohjelmointitausta ei välttämättä ole kovin vahva, vastaavat tietoturvajärjestelmien arvojen ja rajojen säätämisestiä. Siksi sekä ohjelmistot että mallit on suunniteltava siten, että niiden säätö onnistuu ilman ohjelmointiteknistä osaamista."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monitoring and Alerting\n",
+    "\n",
+    "Vaikka turvallisuusjärjestelmien vaatimukset saatavuuden (*uptime*) ja resilienssin osalta ovat armottomat, tulee virhetilanteita välttämättä vastaan. Tieto näistä ja kokonaistilanteesta ylipäätään saadaan monitoroinnilla, jonka ytimessä on viisi osa-aluetta: mittarit, aikasarjat, havainnointijärjestelmä, visualisointi ja hälytysjärjestelmä. Näiden järjestelmien valuvika on kuitenkin jopa melko ilmeinen - mikäli monitorointi kaatuu, ei muista järjestelmistä saada enää tietoa. Siksi monitoroinnin kohdalla saatavuus ja resilienssi korostuvat entisestään.\n",
+    "\n",
+    "Mallien monitoroinnissa tuotannon tulosten tarkkailu ja arviointi merkittävien muutosten kannalta on tärkeää, joskin haastavaa. Mallin oikeellisuuden varmentaminen edellyttää usein takaisinkytkentöjä joko toisiin datajoukkoihin tai ihmistä vaatimiin prosesseihin. Samoin dataa on monitoroitava muutosten osalta. Suuret muutokset ovat vähintäänkin mielenkiintoisia ja täten tutkittavia. Myös mallin ja datan väliset käsittelyprosessit vaativat jatkuvaa tarkkailua."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Security and Reliability\n",
+    "\n",
+    "Seuraavaksi käydään läpi niitä asioita, joita tietoturvakontekstiin vietyjen mallien tulisi taata."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature: Robustness in Adversarial Contexts\n",
+    "\n",
+    "Turvallisuusjärjestelmät ovat jatkuvan vihamielisen vaikuttamisen riskin alla. Suojamuurit ovat epäsuora lupaus niiden takana olevasta arvokkaasta asiasta. Kuten kirjassa on tähänkin mennessä aihetta sivuttu, voidaan koneoppimismenetelmiin pyrkiä vaikuttamaan syöttämällä niille niiden päätösrajapintoja muuttavia havaintoja, jotta haitallinen liikenne saataisiin myöhemmin ujutettua huomaamatta sisään järjestelmään. Siksi mallit eivät saa oppia itsenäisesti ja sokeasti mukautumaan, vaan niitä on testattava esimerkiki jotain määrättyä ja normaalista liikenteestä erillistä datajoukkoa vasten. Samoin mallien muutoksista on oltava selvillä."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature: Data Privacy Safeguards and Guarantees\n",
+    "\n",
+    "Yksityisyys on merkityksessään alati kasvava datan alue teknologioiden kehittyessä. Koneoppiminen edellyttää rikasta dataa, mikä vuorostaan voi vaarantaa yksityisyyden suojan. Data voi myös vuotaa malleista mm. rekonstruoinnin avulla. Mikäli hyökkääjä pääsee käsiksi malliin ja riittävään määrään mallinnettavaa ilmiötä kuvantavaan dataan, hyökkääjä voi takaisinmallintaa mallin päätösperusteet ja täten rakentaa ulostuloista arkaluontoiset lähtöpiirteet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feedback and Usability\n",
+    "\n",
+    "Koneen ja ihmisen yhteistyötä vaalivat ja kehittävät järjestelmät ovat tietoturvajärjestelmien päämäärä. Mikäli järjestelmän käyttäjäkokemus on huono, ei sitä aiemmin mainituista syistä joko oteta käyttöön tai osata hyödyntää koko potentiaalissaan. Tulosten perusteet ja mallin toiminnan läpinäkyvyys ovat lähtökohtaehtoja, jotka on tasapainotettava tietoturvallisuuden kanssa."
    ]
   }
  ],
